--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,8 @@ add_executable(main
 )
 
 pico_enable_stdio_usb(main 1)
+pico_enable_stdio_uart(main 0)
 
 pico_add_extra_outputs(main)
 
-target_link_libraries(main pico_stdlib)
+target_link_libraries(main pico_stdlib freertos)
