--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,26 @@ set(CMAKE_CXX_STANDARD 17)
 # Init PICO SDK
 pico_sdk_init()
 
-# Add src files
+# Init FreRTOS
+set(PICO_SDK_FREERTOS_SOURCE lib/FreeRTOS)
+
+add_library(freertos
+    ${PICO_SDK_FREERTOS_SOURCE}/event_groups.c
+    ${PICO_SDK_FREERTOS_SOURCE}/list.c
+    ${PICO_SDK_FREERTOS_SOURCE}/queue.c
+    ${PICO_SDK_FREERTOS_SOURCE}/stream_buffer.c
+    ${PICO_SDK_FREERTOS_SOURCE}/tasks.c
+    ${PICO_SDK_FREERTOS_SOURCE}/timers.c
+    ${PICO_SDK_FREERTOS_SOURCE}/portable/MemMang/heap_3.c
+    ${PICO_SDK_FREERTOS_SOURCE}/portable/GCC/ARM_CM0/port.c
+)
+
+target_include_directories(freertos PUBLIC
+    .
+    ${PICO_SDK_FREERTOS_SOURCE}/include
+    ${PICO_SDK_FREERTOS_SOURCE}/portable/GCC/ARM_CM0
+)
+
+# Inclue the Source Files
+# add_subdirectory(freertos)
 add_subdirectory(src)
